<?xml version="1.0"?>
<package format="2">
  <name>ros_lock</name>
  <version>0.0.0</version>
  <description>The ros_lock package</description>

  <maintainer email="sktometometo@gmail.com">sktometometo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
